# kdeadmin-strigi-analyzers

./: CMakeLists.txt  Makefile.am
deb/: CMakeLists.txt  Makefile.am  Messages.sh  kfile_deb.cpp  kfile_deb.desktop  kfile_deb.h
rpm/: CMakeLists.txt  Makefile.am  Messages.sh  kfile_rpm.cpp  kfile_rpm.desktop  kfile_rpm.h
